# drone_sim_rec_carla

./: .gitmodules  LinkSimulations.txt  README.md  Weather properties.xlsx  flying_sensor.json  rviz_carla_RGBdown.rviz
astuff_sensor_msgs/ibeo_msgs/: CMakeLists.txt
astuff_sensor_msgs/ibeo_msgs/msg/: CameraImage.msg  HostVehicleState2805.msg  (+14 more)
carla_ad_demo/launch/: carla_ad_demo.launch  carla_ad_demo.launch.py  carla_ad_demo_with_scenario.launch  carla_ad_demo_with_scenario.launch.py
carla_manual_control/: package.xml
carla_ros_bridge/launch/: carla_ros_bridge.launch  carla_ros_bridge.launch.py  carla_ros_bridge_with_example_ego_vehicle.launch  carla_ros_bridge_with_example_ego_vehicle.launch.py
carla_ros_bridge/test/: ros_bridge_client.test  ros_bridge_client_ros2_test.py  settings.yaml
carla_ros_scenario_runner/launch/: carla_ros_scenario_runner.launch  carla_ros_scenario_runner.launch.py
carla_spawn_objects/: CMakeLists.txt  package.xml
carla_spawn_objects/config/: flying_sensor.json
carla_spawn_objects/launch/: carla_spawn_objects.launch  drone_image.launch  traffic_manager.launch
carla_waypoint_publisher/launch/: carla_waypoint_publisher.launch  carla_waypoint_publisher.launch.py
docker/: build_ros2-galactic.sh  ros2-galactic.dockerfile  run_ros2-galactic.sh
docker_ws/: Dockerfile.txt
docs/: ros_installation_ros2.md
drone_rgb_down_image/: CMakeLists.txt  package.xml  setup.py
drone_rgb_down_image/launch/: drone_image.launch
pcl_recorder/launch/: pcl_recorder.launch  pcl_recorder.launch.py
pcl_recorder/src/: PclRecorderROS2.cpp
(+12 files in other folders)
